Se agrego la firma en el booter y la class

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="app.js"></script>
     <footer class="footer">
         <p class="footerText">Pending Task es un Proyecto practico creado para Ucamp</p>
+        <p class="footerText">Creado por Oted Limon</p>
     </footer>
     
 </body>
